# rust-chain

./: .gitignore  Cargo.toml  Dockerfile  README.md
apps/demo/: Cargo.toml
apps/demo/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  crypto.rs  hash.rs  lib.rs  merkle.rs  ser.rs  store.rs  tx.rs
crates/core/tests/: basic.rs
