[package]
name = "chain-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
hex = "0.4"

# crypto & hash
blake3 = "1"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"

# Ed25519
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }

# secp256k1 (ECDSA over P-256 or K-256; we use k256)
k256 = { version = "0.13", features = ["ecdsa", "pem"] }
